@@ -1031,6 +1031,10 @@ name|_useRemoteConfig
 init|=
 literal|false
 decl_stmt|;
+specifier|private
+name|File
+name|_defaultUserDir
+decl_stmt|;
 specifier|public
 name|Ivy
 parameter_list|()
@@ -1674,44 +1678,9 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
-name|setVariable
-argument_list|(
-literal|"ivy.conf.dir"
-argument_list|,
-operator|new
-name|File
+name|setConfigurationVariables
 argument_list|(
 name|configurationFile
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-operator|.
-name|getParent
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|setVariable
-argument_list|(
-literal|"ivy.conf.file"
-argument_list|,
-name|configurationFile
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|setVariable
-argument_list|(
-literal|"ivy.conf.url"
-argument_list|,
-name|configurationFile
-operator|.
-name|toURL
-argument_list|()
-operator|.
-name|toExternalForm
-argument_list|()
 argument_list|)
 expr_stmt|;
 try|try
@@ -1759,6 +1728,19 @@ throw|throw
 name|iae
 throw|;
 block|}
+name|setVariable
+argument_list|(
+literal|"ivy.default.ivy.user.dir"
+argument_list|,
+name|getDefaultIvyUserDir
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
 name|Message
 operator|.
 name|verbose
@@ -1810,6 +1792,161 @@ operator|.
 name|currentTimeMillis
 argument_list|()
 decl_stmt|;
+name|setConfigurationVariables
+argument_list|(
+name|configurationURL
+argument_list|)
+expr_stmt|;
+operator|new
+name|XmlIvyConfigurationParser
+argument_list|(
+name|this
+argument_list|)
+operator|.
+name|parse
+argument_list|(
+name|configurationURL
+argument_list|)
+expr_stmt|;
+name|setVariable
+argument_list|(
+literal|"ivy.default.ivy.user.dir"
+argument_list|,
+name|getDefaultIvyUserDir
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"configuration done ("
+operator|+
+operator|(
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+operator|-
+name|start
+operator|)
+operator|+
+literal|"ms)"
+argument_list|)
+expr_stmt|;
+name|dumpConfig
+argument_list|()
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|configureDefault
+parameter_list|()
+throws|throws
+name|ParseException
+throws|,
+name|IOException
+block|{
+name|configure
+argument_list|(
+name|getDefaultConfigurationURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|setConfigurationVariables
+parameter_list|(
+name|File
+name|configurationFile
+parameter_list|)
+block|{
+try|try
+block|{
+name|setVariable
+argument_list|(
+literal|"ivy.conf.dir"
+argument_list|,
+operator|new
+name|File
+argument_list|(
+name|configurationFile
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+operator|.
+name|getParent
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|setVariable
+argument_list|(
+literal|"ivy.conf.file"
+argument_list|,
+name|configurationFile
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|setVariable
+argument_list|(
+literal|"ivy.conf.url"
+argument_list|,
+name|configurationFile
+operator|.
+name|toURL
+argument_list|()
+operator|.
+name|toExternalForm
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|MalformedURLException
+name|e
+parameter_list|)
+block|{
+name|IllegalArgumentException
+name|iae
+init|=
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"given file cannot be transformed to url: "
+operator|+
+name|configurationFile
+argument_list|)
+decl_stmt|;
+name|iae
+operator|.
+name|initCause
+argument_list|(
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+name|iae
+throw|;
+block|}
+block|}
+specifier|public
+name|void
+name|setConfigurationVariables
+parameter_list|(
+name|URL
+name|configurationURL
+parameter_list|)
+block|{
 name|String
 name|confURL
 init|=
@@ -1868,38 +2005,6 @@ literal|"configuration url does not contain any slash (/): ivy.conf.dir variable
 argument_list|)
 expr_stmt|;
 block|}
-operator|new
-name|XmlIvyConfigurationParser
-argument_list|(
-name|this
-argument_list|)
-operator|.
-name|parse
-argument_list|(
-name|configurationURL
-argument_list|)
-expr_stmt|;
-name|Message
-operator|.
-name|verbose
-argument_list|(
-literal|"configuration done ("
-operator|+
-operator|(
-name|System
-operator|.
-name|currentTimeMillis
-argument_list|()
-operator|-
-name|start
-operator|)
-operator|+
-literal|"ms)"
-argument_list|)
-expr_stmt|;
-name|dumpConfig
-argument_list|()
-expr_stmt|;
 block|}
 specifier|private
 name|void
@@ -2762,6 +2867,47 @@ expr_stmt|;
 block|}
 specifier|public
 name|File
+name|getDefaultIvyUserDir
+parameter_list|()
+block|{
+if|if
+condition|(
+name|_defaultUserDir
+operator|==
+literal|null
+condition|)
+block|{
+name|_defaultUserDir
+operator|=
+operator|new
+name|File
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"user.home"
+argument_list|)
+argument_list|,
+literal|".ivy"
+argument_list|)
+expr_stmt|;
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"no default ivy user dir defined: set to "
+operator|+
+name|_defaultUserDir
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|_defaultUserDir
+return|;
+block|}
+specifier|public
+name|File
 name|getDefaultCache
 parameter_list|()
 block|{
@@ -2777,14 +2923,10 @@ operator|=
 operator|new
 name|File
 argument_list|(
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"user.home"
-argument_list|)
+name|getDefaultIvyUserDir
+argument_list|()
 argument_list|,
-literal|".ivy-cache"
+literal|"cache"
 argument_list|)
 expr_stmt|;
 name|Message
@@ -10666,6 +10808,52 @@ name|_dictatorResolver
 operator|=
 name|dictatorResolver
 expr_stmt|;
+block|}
+comment|/**       * WARNING: Replace all current ivy variables by the given Map.      * Should be used only when restoring variables.      *       *  Thr given Map is not copied, but stored by reference.      * @param variables      */
+specifier|public
+name|void
+name|setVariables
+parameter_list|(
+name|Map
+name|variables
+parameter_list|)
+block|{
+if|if
+condition|(
+name|variables
+operator|==
+literal|null
+condition|)
+block|{
+throw|throw
+operator|new
+name|NullPointerException
+argument_list|(
+literal|"variables shouldn't be null"
+argument_list|)
+throw|;
+block|}
+name|_variables
+operator|=
+name|variables
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+name|URL
+name|getDefaultConfigurationURL
+parameter_list|()
+block|{
+return|return
+name|Ivy
+operator|.
+name|class
+operator|.
+name|getResource
+argument_list|(
+literal|"conf/ivyconf.xml"
+argument_list|)
+return|;
 block|}
 block|}
 end_class
