@@ -1,0 +1,11 @@
+<ivyconf>
+	<property name="ivy.local.default.root"             value="${ivy.default.ivy.user.dir}/local" overwrite="false"/>
+	<property name="ivy.local.default.ivy.pattern"      value="[organisation]/[module]/[revision]/[type]s/[artifact].[ext]" overwrite="false"/>
+	<property name="ivy.local.default.artifact.pattern" value="[organisation]/[module]/[revision]/[type]s/[artifact].[ext]" overwrite="false"/>
+	<resolvers>
+		<filesystem name="local">
+			<ivy pattern="${ivy.local.default.root}/${ivy.local.default.ivy.pattern}" />
+			<artifact pattern="${ivy.local.default.root}/${ivy.local.default.artifact.pattern}" />
+		</filesystem>
+	</resolvers>
+</ivyconf>
