@@ -245,10 +245,6 @@ block|{
 specifier|private
 name|Configurator
 name|_configurator
-init|=
-operator|new
-name|Configurator
-argument_list|()
 decl_stmt|;
 specifier|private
 name|List
@@ -314,6 +310,12 @@ name|ParseException
 throws|,
 name|IOException
 block|{
+name|_configurator
+operator|=
+operator|new
+name|Configurator
+argument_list|()
+expr_stmt|;
 comment|// put every type definition from ivy to configurator
 name|Map
 name|typeDefs
@@ -372,6 +374,24 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+name|doParse
+argument_list|(
+name|configuration
+argument_list|)
+expr_stmt|;
+block|}
+specifier|private
+name|void
+name|doParse
+parameter_list|(
+name|URL
+name|configuration
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|ParseException
+block|{
 name|InputStream
 name|stream
 init|=
@@ -480,6 +500,31 @@ block|{
 block|}
 block|}
 block|}
+block|}
+specifier|private
+name|void
+name|parse
+parameter_list|(
+name|Configurator
+name|configurator
+parameter_list|,
+name|URL
+name|configuration
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|ParseException
+block|{
+name|_configurator
+operator|=
+name|configurator
+expr_stmt|;
+name|doParse
+argument_list|(
+name|configuration
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 name|void
@@ -1009,6 +1054,24 @@ literal|"value"
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|String
+name|overwrite
+init|=
+name|_ivy
+operator|.
+name|substitute
+argument_list|(
+operator|(
+name|String
+operator|)
+name|attributes
+operator|.
+name|get
+argument_list|(
+literal|"overwrite"
+argument_list|)
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
 name|name
@@ -1046,6 +1109,22 @@ argument_list|(
 name|name
 argument_list|,
 name|value
+argument_list|,
+name|overwrite
+operator|==
+literal|null
+condition|?
+literal|true
+else|:
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|overwrite
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
@@ -1215,6 +1294,20 @@ argument_list|(
 name|propFilePath
 argument_list|)
 decl_stmt|;
+name|Map
+name|variables
+init|=
+operator|new
+name|HashMap
+argument_list|(
+name|_ivy
+operator|.
+name|getVariables
+argument_list|()
+argument_list|)
+decl_stmt|;
+try|try
+block|{
 if|if
 condition|(
 name|incFile
@@ -1232,8 +1325,23 @@ operator|+
 name|propFilePath
 argument_list|)
 expr_stmt|;
+name|_ivy
+operator|.
+name|setConfigurationVariables
+argument_list|(
+name|incFile
+argument_list|)
+expr_stmt|;
+operator|new
+name|XmlIvyConfigurationParser
+argument_list|(
+name|_ivy
+argument_list|)
+operator|.
 name|parse
 argument_list|(
+name|_configurator
+argument_list|,
 name|incFile
 operator|.
 name|toURL
@@ -1252,13 +1360,44 @@ operator|+
 name|propFilePath
 argument_list|)
 expr_stmt|;
-name|parse
-argument_list|(
+name|URL
+name|url
+init|=
 operator|new
 name|URL
 argument_list|(
 name|propFilePath
 argument_list|)
+decl_stmt|;
+name|_ivy
+operator|.
+name|setConfigurationVariables
+argument_list|(
+name|url
+argument_list|)
+expr_stmt|;
+operator|new
+name|XmlIvyConfigurationParser
+argument_list|(
+name|_ivy
+argument_list|)
+operator|.
+name|parse
+argument_list|(
+name|_configurator
+argument_list|,
+name|url
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|_ivy
+operator|.
+name|setVariables
+argument_list|(
+name|variables
 argument_list|)
 expr_stmt|;
 block|}
